--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -11,15 +11,20 @@
 /* Header */
 .header {
   display: flex;
+  position : fixed;
+  width: 100%;
+  top: 0;
+  
   justify-content: space-between;
   align-items: center;
   padding: 10px 30px;
   background-color: #fff;
   border-bottom: 1px solid #dce3eb;
-  background-image: url("wallpaperwebtech.png");
+  background-image: url("../public/wallpaperwebtech.png");
   background-size: 50%; /* couvrir toute la zone */
   background-position: center;     /* centrer */
   height: 100px;
+  z-index: 2000;
 }
 
 /* Titre du site dans le header qui permet à ce que on puisse retourner au menu*/
@@ -33,10 +38,13 @@
   background-color: #FFFCEE;
 }
 
-
 .header-center {
   display: flex;
   gap: 10px;
+}
+
+.header-right {
+  right: 40px;
 }
 
 /* Barres de recherche et de connexion */
@@ -63,7 +71,7 @@
 /* lorsqu'on est au dessus du bouton recherche ou de connexion ca change de couleur en bleu */
 .search-button:hover,
 .login-button:hover {
-  background-color: #2563eb;
+  background-color: #FFFCEE;
 }
 
 /* Main */
@@ -78,6 +86,7 @@
   text-align: center;
   gap: 0.5rem;
   padding-bottom: 60px; 
+  border-radius: 20px;
 }
 
 .titre {
@@ -148,7 +157,7 @@
 }
 
 /* lorsqu'on pointe la link de la recette ca souligne */
-.recipe-link:hover {
+.recipe-link:hover, .themerecipe:hover p {
   text-decoration: underline;
 }
 
@@ -171,7 +180,7 @@
   color: #777;
   padding: 15px 0;
   border-top: 1px solid #dce3eb;
-  background-color: #fff;
+  background-color: #fff; 
 
   position: fixed;  /* rend le footer fixe */
   bottom: 0;        /* toujours en bas de l’écran */
@@ -192,4 +201,26 @@
   justify-content: space-between;
 }
 
+/* Menu déroulant avec tous les themes de recettes */
+.menu-deroulant {
+  position: absolute;
+  
+  position : fixed;
+  top: -50vh; /* caché par défaut */
+
+  left: 0;
+  width: 100%;
+  background-color: #fff3e0;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-around;
+  transition: top 0.7s ease;
+  z-index: 999;
+  
+
+}
+.menu-deroulant.open {
+  top: 100px; /* positionné sous le header quand ouvert */
+}
 
