--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -6,6 +6,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  
 }
 
 /* Header */
@@ -14,7 +15,7 @@
   position : fixed;
   width: 100%;
   top: 0;
-  
+
   justify-content: space-between;
   align-items: center;
   padding: 10px 30px;
@@ -28,24 +29,15 @@
 }
 
 /* Titre du site dans le header qui permet à ce que on puisse retourner au menu*/
-.header-left { 
+.header-left, .header-right, .header-center { 
   font-weight: bold;
   font-size: 20px;
   color: #333;
-  border: 2px solid black;
   padding: 5px 10px;
   border-radius: 5px;
   background-color: #FFFCEE;
 }
 
-.header-center {
-  display: flex;
-  gap: 10px;
-}
-
-.header-right {
-  right: 40px;
-}
 
 /* Barres de recherche et de connexion */
 .search-bar, .connexion-form input, .creationcompte-form input {
@@ -57,7 +49,7 @@
 
 /* Boutons */
 .search-button,
-.login-button, .left-button, .right-button {
+.login-button, .left-button, .right-button, .menu-button {
   padding: 0.7rem 1.2rem;
   background-color: #f4a887;
   color: black;
