<feat>passage css tailwind

--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -1,227 +1,4 @@
-/*@tailwind base;
+/* Global / Tailwind base */
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
- */
-
-/* Global Styles */
-.cooking-page {
-  font-family: Aptos;
-  background-color: #f5f8fc;
-  color: #333;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  
-}
-
-/* Header */
-.header {
-  display: flex;
-  position : fixed;
-  width: 100%;
-  top: 0;
-
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 30px;
-  background-color: #fff;
-  border-bottom: 1px solid #dce3eb;
-  background-image: url("../public/wallpaperwebtech.png");
-  background-size: 50%; /* couvrir toute la zone */
-  background-position: center;     /* centrer */
-  height: 100px;
-  z-index: 2000;
-}
-
-/* Titre du site dans le header qui permet à ce que on puisse retourner au menu*/
-.header-left, .header-right, .header-center { 
-  font-weight: bold;
-  font-size: 20px;
-  color: #333;
-  padding: 5px 10px;
-  border-radius: 5px;
-  background-color: #FFFCEE;
-}
-
-
-/* Barres de recherche et de connexion */
-.search-bar, .connexion-form input, .creationcompte-form input {
-  padding: 0.7rem;
-  font-size: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-}
-
-/* Boutons */
-.search-button,
-.login-button, .left-button, .right-button, .menu-button {
-  padding: 0.7rem 1.2rem;
-  background-color: #f4a887;
-  color: black;
-  border: none;
-  border-radius: 3px;
-  font-size: 1rem;
-  cursor: pointer;
-}
-
-
-/* lorsqu'on est au dessus du bouton recherche ou de connexion ca change de couleur en bleu */
-.search-button:hover,
-.login-button:hover .menu-button:hover, .left-button:hover, .right-button:hover{
-  background-color: #FFFCEE;
-}
-
-/* Main */
-.main-content {
-  flex: 1;
-  text-align: left;
-  margin: 40px 10%;
-  background-color: #FFFCEE;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  gap: 0.5rem;
-  padding-bottom: 60px; 
-  border-radius: 20px;
-}
-
-.titre {
-  margin-top: 30px;
-  padding-top: 30px;
-  font-size: 22px;
-  font-weight: bold;
-  margin: 0;
-}
-
-.subtitle {
-  color: #555;
-  padding: 20px;
-  width: 80%;
-  text-align: center;
-  line-height: 1.6;
-  font-size: 1.1rem;
-  margin: 0 0 1rem 0;
-  font-style: italic;
-}
-
-
-/* Recipe Cards */
-.recipes {
-  margin: 20px auto; /* centré horizontalement */
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr)); /* ajuste le nombre de colonnes en fonction de la taille de l'écran*/
-  gap: 16px;
-  align-items: start;
-  width: calc(100% - 80px);
-  max-width: 1100px; /* limite la largeur pour rester centré */
-  box-sizing: border-box;
-  justify-items: center; /* centre le contenu de chaque cellule */
-}
-
-/* carte de la recette */
-.recipe-card {
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-  width: 250px;
-  overflow: hidden;
-  text-align: left;
-}
-
-.recipe-image {
-  height: 140px;
-  background: linear-gradient(135deg, #ccc, #999);
-}
-
-.recipe-content {
-  padding: 15px;
-}
-
-.recipe-content h3 {
-  font-size: 16px;
-  margin-bottom: 8px;
-}
-
-.recipe-content p {
-  font-size: 13px;
-  color: #555;
-}
-
-/* link de la recette */
-.recipe-link {
-  display: inline-block;
-  margin-top: 10px;
-  font-size: 13px;
-  color: #f4a887;
-  text-decoration: none;
-}
-
-/* lorsqu'on pointe la link de la recette ca souligne */
-.recipe-link:hover, .themerecipe:hover p {
-  text-decoration: underline;
-}
-
-/* temoignage */
-.temoignage {
-  background-color: #fff;
-  padding: 20px;
-  border-left: 3px solid #f4a887;
-  width: 80%;
-  margin: 0 auto 50px auto;
-  text-align: left;
-  font-size: 14px;
-  line-height: 1.6;
-}
-
-/* Footer */
-.footer {
-  text-align: center;
-  font-size: 13px;
-  color: #777;
-  padding: 15px 0;
-  border-top: 1px solid #dce3eb;
-  background-color: #fff; 
-
-  position: fixed;  /* rend le footer fixe */
-  bottom: 0;        /* toujours en bas de l’écran */
-  width: 100%;     /* prend toute la largeur */
-}
-
-/* Formulaire */
-.connexion-form, .creationcompte-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 300px; /* largeur des inputs */
-}
-
-/* COnteneur nécessaire pour mettre les boutons left et right à coté tout en étant au milieu */
-.button-container {
-  display: flex;
-  justify-content: space-between;
-}
-
-/* Menu déroulant avec tous les themes de recettes */
-.menu-deroulant {
-  position: absolute;
-  
-  position : fixed;
-  top: -50vh; /* caché par défaut */
-
-  left: 0;
-  width: 100%;
-  background-color: #fff3e0;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  padding: 20px 0;
-  display: flex;
-  justify-content: space-around;
-  transition: top 0.7s ease;
-  z-index: 999;
-  
-
-}
-.menu-deroulant.open {
-  top: 100px; /* positionné sous le header quand ouvert */
-}
-
